# data-analysis-rs

./: .gitignore  Cargo.toml  README.md
src/: accuracy.rs  calculations.rs  console.rs  main.rs
